# QLogger

./: .gitignore  CMakeLists.txt
QLogger/: Console.cpp  Console.h  File.cpp  File.h  QLogger.h
